--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">ComposeApp</string>
+
+    <string name="bottom_nav_home">Home</string>
+    <string name="bottom_nav_favorite">Favorite</string>
+    <string name="bottom_nav_profile">Profile</string>
+
+    <string name="title_login">Login</string>
+    <string name="title_details">Details</string>
+    <string name="title_coming_soon">Coming Soon</string>
+
 </resources>
